Closed Bug 199216 Opened 23 years ago Closed 23 years ago

adding domain.com to whitelist doesn't allow popups from *.domain.com to appear

Categories

(Core :: Networking: Cookies, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: dwitte)

References

Details

(Keywords: regression)

Attachments

(1 file)

adding domain.com to whitelist doesn't allow popups from *.domain.com to appear. found using 2003.03.25 comm trunk bits. spoke to shliang about this issue --prolly regressed on 3/21 with the cookies landing. this blocks bug 195924. 1. go to the Popup Windows pref panel (under Privacy & Security). 2. click "Suppress popups" radiobutton and click the Exceptions button. 3. in the resulting (whitelist) dialog, enter the domain of a site whose popups you want to view. eg, netscape.com. 4. click OK, OK --to save and dismiss the dialog and prefs window. 5. visit a subdomain of the domain you entered in step 3, eg, home.netscape.com. expected: the popup window should appear for *.domain.com. actual results: popups are being blocked when they shouldn't be.
Attached patch patchSplinter Review
Only walk up the domain tree for popups This is a not-so-nice way to do it, but it needs to be fixed before 1.4a, without changing the way cookies and images are blocked.
Comment on attachment 118496 [details] [diff] [review] patch r=dwitte
Attachment #118496 - Flags: review+
Attachment #118496 - Flags: superreview?(darin)
Comment on attachment 118496 [details] [diff] [review] patch sr=jag
Attachment #118496 - Flags: superreview?(darin) → superreview+
checked in by timeless @ 1651
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
looks good using a test build from shliang, which had this patch. thanks so much for the fast fix!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: