Bug 199216 adding domain.com to whitelist doesn't allow popups from *.domain.com to appear patch by mvl@exedo.nl r=dwitte sr=jag